Revision history for PDL-Stats

0.6.0   04/08/2012
        Added group_by() method in Basic.pm.
        Bails out of installation if running under perl 5.14.0 to 5.15.8.
        Removed old deprecated method get_data() from Basic.pm
        Moved no slatec warning from module to test. Removed lvalue assignments from tests.

0.5.5   04/22/2011
        GLM Windows 32-bit test bug fix; GLM quits installation with PDL-2.4.7 warning. Documentation update.

0.5.4   04/19/2011
        GLM pca() and plot_scores() can do cov version.
        [rt.cpan.org #67557] Undo PREREQ_FATAL => 1 in Makefile.PL.

0.5.3   04/18/2011
        stats_glm.t pca() test SLATEC vs. MatrixOps precision fix.

0.5.2   04/17/2011
        stats_glm.t pca() test precision fix.

0.5.1   04/16/2011
        ***GLM pca() return value names updated*** to be more compatible with the literature.
        GLM added plot_scores(); plot_scree() name changed to plot_screes() for consistency across plotting functions.
        Updated plotting functions to default to png in Windows because GW doesn't reopen after close.

0.5.0	04/02/2011
		Updated tests to use __DATA__ instead of separate test data files.
		GLM added interaction_code(); bug fix for dummy_code().
		GLM added ols_rptd()!
        GLM added plot_residual().
		GLM eval wrapped optional modules; replaced perl reverse sort with slice (-1:0).
        Basic added binomial_test().
        TS updated plot_season() to season_m(); deprecated a few old function names, filt_exp(), filt_ma(), and dsea().

0.4.3	04/08/2010
		Distr::plot_distr() bug fix.
		Kmeans::kmeans() pod update.

0.4.2	03/27/2010
		rtable() added to PDL::Basic. get_data() deprecated. Preparing for transitioning to using rcols() for IO.
		perldl online help support! (ie "? stdv" in perldl works)

0.4.1	02/02/2010
		GLM anova anova_rptd IVNM default val matched to [].
		Makefile.PL exit 0 without PDL::Lite.
		TS added wmape
		pod fix for CPAN

0.4.0	01/24/2010